# database-mcp-challenge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/db_mcp_server/: asgi.py  bootstrap.py  config.py  db.py  server.py
src/db_mcp_server/backends/: sqlalchemy.py
tests/: test.py  test_config.py  test_mcp_server.py  test_sqlalchemy_backend.py
tests/integration/: conftest.py  test_e2e_pg.py
tests/unit/: test_config.py  test_mcp_server.py  test_sqlite_backend.py
